# whoknows_variations

./: .flake8  .gitignore  Cargo.toml  README.md  Rocket.toml  deploy.sh  diesel.toml  docker-compose.dev.yml  docker-compose.yml  index.html  is_valid_crpat.sh  pyproject.toml  readme.md  rocket-server.sh  setup.sh
.github/: continuous_delivery.yml
.github /: PULL_REQUEST_TEMPLATE.md
.github/archive/: safety.yml
.github/disabled_workflows/: basic_self-hosted.yml
.github/workflows/: auto-add-issues.yml  bandit.yml  ci.yaml  continuous_delivery.yaml  continuous_delivery.yml  continuous_delivery_deployment.yaml  continuous_deployment.yml  deploy.yml  github_packages_docker_build_simple.yml  infrastructure_as_code.yml  issues.yml  linting.yaml  owasp_zap.yml  playwright.yml  safety.yml  staging.yml
deployment_docs/nginx/: nginx.conf  whoknows-staging.dk  whoknows.dk
deployment_docs/systemd-unit-files/: whoknows-staging.service  (+1 more)
documentation/: contributions.md  problems-with-python-app.md  useful-links.md
infrastructure/: inline_commands.sh  main.tf  network.tf  outputs.tf  terraform.tfvars_copy  variables.tf  vm.tf
migrations/: 20240919161354_user.sql  20240919161433_pages.sql  20240920083027_page_seed.sql  20240922165230_add_description_to_pages.sql  20240924122156_change-default-user.sql  20240925081805_remove_default_user.sql  20240926113426_new.sql  20241119150510_created_at_to_user.sql  20241119155344_not_null.sql
ruby-app/: .gitignore  Gemfile  app.rb  init_db.rb  queries.rb  whoknows.db
src/: Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  lib.rs  main.rs  prometheus.yml  run_forever.sh  schema.rs  schema.sql  security.rs  whoknows.db
static/: style.css
templates/: about.html.tera  index.html.tera  layout.html.tera  login.html.tera  register.html.tera  search.html.tera  weather.html.tera
tests/: delete_user_test.rs  login_test.rs  register_test.rs  search_test.rs  weather_test.rs
tls/: docker-compose.yml  nginx.conf
tutorial/: 1._Flask_Prometheus_Setup.md  2._Grafana_Setup.md  Migration.md  ORM.md  The_Database.md  continuous_delivery.md
tutorials/: 01._Overview.md  01._Ways_to_Achieve_Continuous_Deployment.md  01._bandit.md  01._registering_domains_with_one.com.md  01._the_setup.md  02._Continuous_Delivery.md  02._Generating_CR_PAT.md  02._running_terraform.md  02._running_terraform_locally.md  02._safety.md  02._setting_up_in_one.com.md  03._CLI_Example.md  03._The_Continuous_Deployment_Workflow.md  03._owasp_zap.md  03._running_it_on_the_server.md  03._the_workflow.md  04._Environment_Variables.md  04._Workflow_File.md  04._making_local_changes.md  05._Environment_Variables.md  always_run_run.sh.md  app_tests.py  linting.md  refactored_workflow.yml  self_hosted_runner.md  ssh_and_execute_commands_remotely.md  terraform.md  testing.md
(+65 files in other folders)
