[package]
name = "whoknows_nooneknows"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.10.0"
bcrypt = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
dotenvy = "0.15"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_contrib]
version = "0.4.4"
features = ["tera_templates", "serve", "json"]

[default.databases.whoknows]
url = "postgres://postgres:postgres@localhost/whoknows"
