[package]
name = "whoknows_nooneknows"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.17.1"
bcrypt = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"] }
dotenvy = "0.15"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }