[tool.poetry]
name = "ci"
version = "0.1.0"
description = ""
authors = ["anderslatif <anderslatif@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "<6.0.0"

black = "^24.8.0"
ruff = "^0.5.7"
prospector = "^1.10.3"
setuptools = "^72.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "backend"
from = "src"